# macos-auth

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md
crates/helper/: Cargo.toml
crates/helper/src/: main.rs
crates/helper/tests/: integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: build-farm.md  helper.md  linux-vm-test-plan.md  pam-testing.md  release-packaging.md  release-runbook.md
packaging/linux/: README.md  build-deb.sh  build-rpm.sh  build-x86_64-containers.sh  smoke-test-package.sh
packaging/linux/deb/: control.in
packaging/linux/examples/: config.toml.sample  ssh-config.sample
packaging/linux/rpm/: macos-auth.spec.in
packaging/release/: collect-artifacts.sh  make-notes.sh  upload-draft.sh  verify-artifacts.sh
pam/: Makefile  README.md  pam_macos_auth.c
pam/examples/: macos-auth-test  sudo-snippet
scripts/: check.sh  linux-dev-setup.sh  linux-install-dev.sh
test-vectors/v1/: approval.json
